Fix the z-index issue

--- a/styles/Work.css
+++ b/styles/Work.css
@@ -1,11 +1,33 @@
-@import "~react-image-gallery/styles/css/image-gallery.css";
-
-@media screen and (min-width: 780px) {
-    .custom-form{
-        margin:auto;
-        max-width: 700px;
-    }
+.blog-cart:hover {
+    outline: 3px solid darkorange;
+    transform: scale(1.05);
+    transition: 0.5s;
 }
+
+ @keyframes flicker {
+    0%, 18%, 22%, 25%, 53%, 57%, 100% {
+        text-shadow:
+        0 0 4px #fff,
+        0 0 11px #fff,
+        0 0 19px #fff,
+        0 0 40px #0fa,
+        0 0 80px #0fa,
+        0 0 90px #0fa,
+        0 0 100px #0fa,
+        0 0 150px #0fa;
+    }
+
+    10%, 20%, 24%, 55% {        
+        text-shadow: none;
+    }    
+}
+
+.neon-effect{
+    animation: flicker 1.5s infinite alternate;
+    color: #fff;
+    font-weight: bolder;
+}
+
 
 .work{
     border-bottom: 7px solid brown;
@@ -57,15 +79,13 @@ time{
     color: black!important;
 }
 
-
 .skill {
     color: white;
 }
 
-
 .popup-box{
     position: fixed;
-    background: darkgray;
+    background: black;
     width: 100%;
     height: 100%;
     top: 0;
@@ -73,7 +93,6 @@ time{
 }
 
 .popup{
-    z-index: 10;
     position: absolute;
     background: #fff;
     border-radius: 4px;
